--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,9 @@
-@import 'vendor/normalize';
-@import '../css/vendor/jquery.formstyler.css';
-@import '../css/vendor/jquery.formstyler.theme.css';
-@import url('https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css');
-@import url('https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css');
+@import '../../node_modules/normalize.css/normalize';
+@import '../../node_modules/jquery-form-styler/dist/jquery.formstyler';
+@import '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme';
+@import '../../node_modules/ion-rangeslider/css/ion.rangeSlider';
+@import '../../node_modules/slick-carousel/slick/slick';
+@import '../../node_modules/rateyo/lib/cjs/rateyo';
 @import 'fonts';
 @import 'variables';
 @import 'global';
